# KMP

./: .cscope.in.out  .cscope.out  .cscope.po.out  .tags  .ycm_extra_conf.py  CMakeLists.txt  main.cpp
kmp/: CMakeLists.txt
kmp/include/: kmp.h
kmp/src/: kmp.cpp
